<resources>
    <string name="app_name">Project2_Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="namefragment">Nombre</string>
    <string name="lastnamefragment">Apellido</string>
    <string name="mainTV">¡BIENVENIDO A NUESTRO PROGRAMA!</string>
    <string name="name">Ingrese nombre</string>
    <string name="lastname">Ingrese apellido</string>
    <string name="btn2">Limpiar</string>
    <string name="btn1">Enviar</string>
</resources>