<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd1f5"
    tools:context=".first_fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTV"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/logoutp"
        android:layout_width="147dp"
        android:layout_height="143dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logoutp" />

    <TextView
        android:id="@+id/in"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/fondo_btn"
        android:text="@string/btn2"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:drawableTint="@null"
        android:typeface="serif"
        />

    <EditText
        android:id="@+id/cfn"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="240dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/ia"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="230dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/cln"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="240dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/fondo_btn"
        android:text="@string/btn1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif"
        />

</FrameLayout>